[tool.poetry]
name = "vub"
version = "0.1.0"
description = "Implementation of the experiments in the paper 'Explainable Regularization in DNNs Using the Information Bottleneck' (2023)"
authors = ["Nir Weingarten <nirzvi89@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
transformers = "^4.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
